Added date format to serializer. Renamed serializer helpers.